# SVDSuite

./: .gitignore  LICENSE  README.md  generate_resolver_test_doc.sh  generate_resolver_tests_doc.sh  pyproject.toml
.github/workflows/: publish.yml
resolver_tests_doc/: 404.html  index.html  objects.inv  test_application_of_default_values.html  test_cluster_inheritance_via_derived_from.html  test_derived_from_path_resolving.html  test_development.html  test_dim_handling.html  test_enumerated_values.html  test_enumerated_values_copy_via_derived_from.html  test_field_inheritance_via_derived_from.html  test_logical_integrity.html  test_peripheral_inheritance_via_derived_from.html  test_register_inheritance_via_derived_from.html  test_size_inheritance_and_adjustment.html
resolver_tests_doc/search/: search_index.json
src/svdsuite/: __init__.py  map.py  parse.py  process.py  process_model.py  serialize.py  svd_model.py  types.py  validate.py
tests/: conftest.py  test_derived_from.py  test_dim.py  test_parsing.py  test_process.py  test_process_with_svds.py  test_serialize.py  test_to_xml.py  test_validate.py
tests/svd/: derived_from_forward.svd  derived_from_forward2.svd  derived_from_multiple.svd  derived_from_peripheral_forward2.svd  derived_from_peripheral_multiple.svd  derived_from_peripheral_register_no_overlap.svd  derived_from_peripheral_register_no_overlap_complex.svd  derived_from_peripheral_register_no_overlap_complex2.svd  derived_from_peripheral_register_no_overlap_unsorted.svd  derived_from_peripheral_simple.svd  derived_from_register_forward.svd  derived_from_register_no_overlap.svd  derived_from_register_no_overlap_complex.svd  derived_from_register_no_overlap_complex2.svd  derived_from_register_no_overlap_unsorted.svd  derived_from_register_over_peripherals.svd  dim_array.svd  (+13 more)
(+221 files in other folders)
